# pfa-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _check_model.py  _check_realtime.py  alpaca_out.txt  celerybeat-schedule  celerybeat-schedule.db  celerybeat-schedule.dir  class_diagram.txt  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  scratch_test_backtest.py  seed.py  test_alpaca.py  test_alpaca_fetch.py
apps/accounts/: adapters.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py  ws_auth.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0003_userpreference.py
apps/accounts/tests/: test_admin_api.py  test_analyst_role.py  test_api_keys.py  test_models.py  test_oauth_redirect.py  test_password_endpoints.py  test_permissions.py  test_user_preferences.py  (+2 more)
apps/analytics/: models.py  serializers.py  services.py  throttles.py  timesfm_service.py  urls.py  views.py
apps/events/: bus.py  types.py
apps/export/: urls.py  views.py
apps/intelligence/: admin.py  detector.py  memory.py  models.py  retrainer.py  serializers.py  tasks.py  urls.py  views.py
apps/market/: alpaca_stream.py  consumers.py  indicators.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
apps/pipeline/: pipeline.py  tasks.py
apps/portfolio/: models.py  serializers.py  urls.py  views.py
apps/sentiment/: scorer.py
apps/signals/: aggregation.py  alerts.py  consumers.py  engine.py  features.py  hype.py  models.py  routing.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/social/: cleaner.py  models.py  news_stream.py  serializers.py  urls.py  views.py
apps/strategies/: engine.py  models.py  serializers.py  urls.py  views.py
apps/tickers/: admin.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py
config/settings/: base.py  local.py  test.py
crowdsignal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: start_backend_all.sh
scripts/adhoc/: check_data.py  fetch_probe.py  pipeline_out_probe.py  run_pipeline_probe.py  scratch_test.py  scratch_ws.py  social_endpoints_probe.py
(+103 files in other folders)
