[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdsignal-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "channels>=4.0",
    "channels-redis>=4.1",
    "celery[redis]>=5.3",
    "django-celery-beat>=2.5",
    "psycopg2-binary>=2.9",
    "transformers>=4.35",
    "torch>=2.1",
    "alpaca-py>=0.13",
    "feedparser>=6.0",
    "requests>=2.31",
    "python-decouple>=3.8",
    "daphne>=4.0",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "pandas>=2.1",
    "numpy>=1.26",
    "imbalanced-learn>=0.11",
    "joblib>=1.3",
    "pytz>=2026.1.post1",
    "django-allauth[socialaccount]>=0.61",
    "dj-rest-auth[with_social]>=5.0",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "django-ratelimit>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-asyncio>=0.21",
    "black>=23",
    "ruff>=0.1",
    "channels[daphne]>=4.0",
    "pytest-cov>=4.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
packages = ["apps", "config"]
